Fixing black version in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -46,7 +46,7 @@ commands =
     flake8
     black --check --exclude "/(\.eggs|\.git|\.tox|\.venv|\.build|dist|charmhelpers|mod|files)/" .
 deps =
-    black
+    blac<24.0.0
     flake8
     flake8-docstrings
     flake8-import-order
@@ -69,7 +69,7 @@ max-complexity = 14
 commands =
     black --exclude "/(\.eggs|\.git|\.tox|\.venv|\.build|dist|charmhelpers|mod|files)/" .
 deps =
-    black
+    black<24.0.0
 
 [testenv:unit]
 commands =
