--- a/tox.ini
+++ b/tox.ini
@@ -46,7 +46,7 @@ commands =
     flake8
     black --check --exclude "/(\.eggs|\.git|\.tox|\.venv|\.build|dist|charmhelpers|mod|files)/" .
 deps =
-    black<24.0.0
+    black
     flake8
     flake8-docstrings
     flake8-import-order
