--- a/tox.ini
+++ b/tox.ini
@@ -69,7 +69,7 @@ max-complexity = 14
 commands =
     black --exclude "/(\.eggs|\.git|\.tox|\.venv|\.build|dist|charmhelpers|mod|files)/" .
 deps =
-    black<24.0.0
+    black
 
 [testenv:unit]
 commands =
